2007-04-05 Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, src/g_smob.c: Added two new scheme functions:

	    - g_calcule_new_attrib_bounds: calcule the new bounds of an 
	      attribute with the given parameters, _without_ modifying the 
	      attribute.

	    - g_get_attrib_value_by_attrib_name: given an object and an 
	      attribute name, this function returns a list with the values
	      of the attributes with the given name in that object.

2007-02-24 Peter Clifton <pcjc2@cam.ac.uk>

	Merge changes to date from noscreen branch.

	2007-02-12 Peter Clifton <pcjc2@cam.ac.uk>

		* include/prototype.h, src/o_arc_basic.c, src/o_basic.c,
		  src/o_box_basic.c, src/o_circle_basic.c, src/o_line_basic.c,
		  src/o_picture.c: Removed o_object_recalc() and all calls
		  to it now the data it calculates is no longer used.

		* src/m_basic.c: Remove implicit grid snapping in SCREENtoWOLRD()

	2006-12-30 Peter Clifton <pcjc2@cam.ac.uk>

		* include/prototype.h, src/o_basic.c: Changed variable names and 
		  comments to function inside_region() to allow its use with world
		  coordinates without apparently swapping top and bottom (which have
		  different sense in screen and world coords. Now uses {x/y}{min/max}.

	2006-12-27 Peter Clifton <pcjc2@cam.ac.uk>

		* include/prototype.h, src/o_arc_basic.c, src/o_box_basic.c, 
		  src/o_bus_basic.c, src/o_circle_basic.c, src/o_complex_basic.c, 
		  src/o_line_basic.c, src/o_net_basic.c, src/o_picture.c, 
		  src/o_pin_basic.c: Removed o_..._translate() functions which
		  are unused.

		* include/prototype.h, src/o_arc_basic.c, src/o_box_basic.c,
		  src/o_bus_basic.c, src/o_circle_basic.c, src/o_line_basic.c,
		  src/o_net_basic.c, src/o_picture.c, src/o_pin_basic.c,
		  src/o_text_basic.c: Removed o_..._rotate() functions unused
		  since changing to world coordinates

		* include/prototype.h, src/o_arc_basic.c, src/o_box_basic.c,
		  src/o_bus_basic.c, src/o_circle_basic.c, src/o_line_basic.c,