@@ -1,3 +1,11 @@
+2007-04-06 Carlos Nieves Onega <cnieves@iespana.es>
+
+	* include/o_types.h, include/prototype.h, src/g_register.c, 
+	  src/libgeda.c : 
+
+	  Register the OBJ_* object type definitions as scheme character 
+	  variables.
+
 2007-04-05 Carlos Nieves Onega <cnieves@iespana.es>
 
 	* include/prototype.h, src/g_smob.c: Added two new scheme functions:
